<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_successful">Login Successful</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="login_error">Login failed please try again</string>
    <string name="PokemonId">PokemonId</string>
    <string name="ImagePokemon">Image Pokemon</string>
    <string name="remove">remove</string>
    <string name="title_activity_main2">MainActivity</string>
</resources>