<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/teal_200"
    >

    <TextView
        android:id="@+id/namePokemon"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/pokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:text="@string/PokemonId"
        app:layout_constraintEnd_toStartOf="@id/miniaturePokemon"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <ImageButton
        android:id="@+id/miniaturePokemon"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/ImagePokemon"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remove"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/remove"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/namePokemon"
        app:layout_constraintTop_toBottomOf="@id/namePokemon"
        android:src="@drawable/minus"/>

</androidx.constraintlayout.widget.ConstraintLayout>